--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
     <title></title>
   </head>
   <body>
+  	<header>
+  		<h1>Tracker</h1>
+  	</header>
+  	<main>
+  		<section>
+  			<form action="">
+  				<label for="category">
+  					Category
+  					<select name="category" id="category">
+  						<option value="groceries">Groceries</option>
+						<option value="rent">Rent</option>
+						<option value="transit">Transit</option>
+						<option value="phone">Phone</option>
+  					</select>
+  				</label>
+  				<label for="vendor">
+  					Vendor
+  					<input type="text" id="vendor" />
+  				</label>
+  				<label for="amount"> 
+  					Amount
+  					<input type="text" id="amount" />
+  				</label>
+  				<label for="date">
+  					Date
+  					<input type="date" id="date" />
+  				</label>
+  				<input type="submit" id="date" />
+  			</form>
+  		</section>
+  		<section>
+  			<ul class="tablist" role="tablist">
+  				<li role="tab">Bar</li>
+  				<li role="tab">Pie</li>
+  				<li role="tab">Line</li>
+  				<li role="tab">Table</li>
+  			</ul>
+  			<div role="tabpanel">
+  				<!-- CHART -->
+  			</div>
+  		</section>
+  	</main>
     <div id='placeholder'></div>
     <script src="/bundle.js"></script>
   </body>
