--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <head>
+       <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+       <link rel="stylesheet" href="style.css">
+     </head>
   </head>
   <body>
     <div id='placeholder'></div>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
